--- a/src/pages/MainPage/style.css
+++ b/src/pages/MainPage/style.css
@@ -1,235 +1,10 @@
-.container {
-    margin-top:150px;
-    
+iframe {
+    border: none;
+    position: fixed;
+    margin-top: 12ch;
+    left: 2ch;
+    right: auto;
+    top: 0;
+    width: 98%;
+    height: 88%;
 }
-.cadastro {
-    margin: 20px;
-    padding: 20px;
-    border: 1px solid #d0d0d0c0;
-    border-radius: 5px;
-    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
-    
-    }
-    table {
-        border-collapse: collapse;
-            width: 100%;
-            font-size: 12px;
-        }
-      
-        
-        th, td {
-            text-align: center;
-            padding: 8px;
-        }
-        @media screen and (max-width: 480px){
-            container{width: 94%;}
-        
-            table thead{display:none;}
-            table body td{display: flex; flex-direction: column; }
-        }
-    
-        h3 {
-            text-align: center;
-        }
-        
-        th {
-            background-color: #ddd;
-        }
-        
-        tr:nth-child(even) {
-            background-color: #f2f2f2;
-        }
-        
-        tr:hover {
-            background-color: #ddd;
-        }
-   
-    
-    .formMainPage {
-        
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        background-color: white;
-        padding: 2rem;
-        border-radius: 6px;
-    }
-    
-    .labelMainPage {
-        text-align: center;
-        margin-top: 1px;
-        display: block;
-        font-size: 1.2rem;
-        margin-bottom: 0rem;
-    }   
-    
-
-    .inputMainPage {
-        width: 86%;
-        margin-top: 10px;
-        font-size: 1rem;
-        margin-bottom: 1rem;
-        border-radius: 5px;
-        background-color: #f2f2f2;
-    }
-
-    .inputMilitarPage {
-        width: 90%;
-        margin-top: 10px;
-        font-size: 1rem;
-        margin-bottom: 1rem;
-        border-radius: 5px;
-        background-color: #f2f2f2;
-    }
-
-    .inputMilitarPage2 {
-        width: 60%;
-        margin-top: 10px;
-        font-size: 1rem;
-        margin-bottom: 1rem;
-        border-radius: 5px;
-        background-color: #f2f2f2;
-    }
-          
-          
-    
-
-    .button {
-        right:10px;
-        padding: 10px;
-        margin-top: 10px;
-        background-color: #3e8e41;
-        color: white;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-        }
-
-     .buttonEdit {
-        right:10px;
-        padding: 10px;
-        margin-top: 10px;
-        background-color: #3e8e41;
-        color: white;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-        }
-
-    .buttonExcluir {
-        right:10px;
-        padding: 10px;
-        margin-top: 10px;
-        background-color: #ff4f4f;
-        color: white;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-        }
-    
-    .buttonCad {
-    right: 10px;
-    padding: 10px;
-    margin-top: 10px;
-    background-color: #3e8e41;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    }
-    
-    .buttonExit {
-        padding: 10px;
-        margin-top: 10px;
-        background-color: #db070b;
-        color: white;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-        }
-    
-    .button:hover {
-    background-color: #3e8e41;
-    }
-    
-    .adicionar {
-    padding: 10px;
-    margin-bottom: 10px;
-    background-color: #4CAF50;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    }
-    
-    .adicionar:hover {
-    background-color: #3e8e41;
-    }
-
-    .modal {
-    padding: 2rem;
-    border-radius: 6px;
-    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: #fff;
-    border-radius: 5px;
-    padding: 20px;
-    width: 800px;
-    border: 1px solid #ccc;
-    }
-    
-    
-    .modal h2 {
-    margin-top: 0;
-    text-align: center;
-    }
-
-    .gridMainPage2 {
-        margin-bottom: 3%;
-        margin-top: 3%;
-        text-align: center;
-        display: grid;
-        grid-template-columns: auto auto;
-        grid-gap: 12px
-    }
-
-    .gridMainPage4 {
-        margin-bottom: 3%;
-        margin-top: 6%;
-        align-items: center;
-        display: grid;
-        grid-template-columns: auto auto auto auto;
-        grid-gap: 12px
-        
-    }
-
-    .gridMainPage5 {
-           font-size: 12px;
-        margin-bottom: 3%;
-        margin-top: 6%;
-        align-items: center;
-        display: grid;
-        grid-template-columns: auto auto auto auto auto;
-        grid-gap: 20px
-        
-    }
-
-    .gridMainPage3 {
-        margin-bottom: 3%;
-        text-align: center;
-        margin-top: 6%;
-        align-items: center;
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-gap: 12px
-        
-    }
-
-    @media (min-width: 460) {
-        table {
-            width: 20%;
-        }
-      }
