--- a/src/pages/Login/sign-in.css
+++ b/src/pages/Login/sign-in.css
@@ -35,7 +35,7 @@
   z-index: 2;
 }
 
-.form-signin input[type="idt"] {
+.form-signin input[type="text"] {
   margin-bottom: -1px;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
